Add test reporting with mocha-junit-reporter and upload reports in workflow

--- a/.github/workflows/cypress-ci.yml
+++ b/.github/workflows/cypress-ci.yml
@@ -23,3 +23,10 @@ jobs:
 
       - name: Run Cypress tests
         run: npx cypress run
+
+      - name: Upload test reports
+        uses: actions/upload-artifact@v3
+        with:
+          name: junit-reports
+          path: reports/junit/
+
