--- a/.github/workflows/cypress-ci.yml
+++ b/.github/workflows/cypress-ci.yml
@@ -4,7 +4,8 @@ on: [push]
 
 jobs:
   test-upload:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
+
 
     steps:
       - name: Checkout code
